changing back to fixed. but leaving the z-index

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ background-color: #344152;
 padding-top: 30px;
 }
 #header{
-position:absolute;
+position:fixed;
 top:0;
 width:100%;
 border:0;
